--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HM Enrichment</title>
+    <!-- MathJax for rendering mathematical equations -->
+    <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" async></script>
     <style>
         body {
             margin: 0;
@@ -24,11 +26,15 @@
             font-size: 2em;
             font-style: italic;
         }
+        /* Style for the math equation */
+        .mjx-chtml {
+            font-size: 1.2em; /* Slightly larger for emphasis */
+        }
     </style>
 </head>
 <body>
     <div class="quote-container">
-        "In the dawn of tomorrow, technology weaves threads of hope, enriching humanity's path to boundless advancement."
+        Euler's Identity: \( e^{i\pi} + 1 = 0 \)
     </div>
 </body>
 </html>
