--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 </head>
 <body>
     <div class="quote-container">
-        Euler's Identity: \( e^{i\pi} + 1 = 0 \)
+        "Energy and persistence conquer all things." — Benjamin Franklin
     </div>
 </body>
 </html>
